# Vietnamese_Voice_Clone

./: .gitignore  AUTHENTICATION_GUIDE.md  GOOGLE_OAUTH_SETUP.md  README.md  docker-compose.development.md  docker-compose.yml  start.sh  test-authentication.sh
backend/: Dockerfile  Dockerfile.dev  README.md  env.example  requirements.txt
backend/src/: .gitmodules  Makefile  README.md  create_admin.py  main.py  pyproject.toml  setup.py
backend/src/core/: vixtts.py
backend/src/db/: mongo_client.py
backend/src/routes/: api.py  auth.py  text2speech.py
backend/src/schemas/: text2speech.py
backend/src/utils/: helpers.py
frontend/: .gitignore  Dockerfile  Dockerfile.dev  next.config.js  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ApiTest.tsx  CustomDropdown.tsx  GenerateControls.tsx  Header.tsx  LeftNav.tsx  (+7 more)
mongo/data/: .bash_history  WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-15803570646137457425.wt  collection-10-15803570646137457425.wt  collection-2-15803570646137457425.wt  collection-4-15803570646137457425.wt  collection-7-15803570646137457425.wt  index-1-15803570646137457425.wt  index-11-15803570646137457425.wt  index-12-15803570646137457425.wt  index-13-15803570646137457425.wt  index-3-15803570646137457425.wt  index-5-15803570646137457425.wt  index-6-15803570646137457425.wt  index-8-15803570646137457425.wt  index-9-15803570646137457425.wt  sizeStorer.wt
nginx/: nginx.conf
(+19 files in other folders)
