[project]
name = "tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cutlet>=0.5.0",
    "deepfilternet==0.5.6",
    "fastapi[standard]>=0.115.12",
    "huggingface-hub>=0.30.2",
    "loguru>=0.7.3",
    "maturin>=1.8.3",
    "pip>=25.1",
    "unidic==1.1.0",
    "vinorm==2.0.7",
]
