[project]
name = "tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cutlet>=0.5.0",
    "deepfilternet==0.5.6",
    "fastapi[standard]>=0.115.12",
    "huggingface-hub>=0.30.2",
    "loguru>=0.7.3",
    "maturin>=1.8.3",
    "pip>=25.1",
    "ruff>=0.11.8",
    "unidic==1.1.0",
    "vinorm==2.0.7",
    "coqpit>=0.0.17",
    "gradio>=5.29.0",
    "hangul-romanize>=0.1.0",
    "librosa>=0.11.0",
    "mutagen>=1.47.0",
    "num2words>=0.5.14",
    "pip>=25.1.1",
    "pypinyin>=0.54.0",
    "ruff>=0.11.8",
    "soundfile>=0.13.1",
    "spacy>=3.8.5",
    "torchaudio>=2.7.0",
    "trainer>=0.0.36",
    "transformers>=4.51.3",
    "unidecode>=1.4.0",
    "einops>=0.8.1",
    "matplotlib>=3.10.1",
    "underthesea>=6.8.4",
    "pymongo>=4.13.0",
    "passlib>=1.7.4",
    "jose>=1.0.0",
    "crypto>=1.4.1",
    "pyjwt>=2.10.1",
    "google-auth>=2.40.2",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.169.0",
]
